# spark-mcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
spark_mcp/: __init__.py  database.py  sanitizer.py  server.py
tests/: conftest.py  test_account_scrubbing.py  test_calendar_account_filter.py  test_categories.py  test_path_traversal.py  test_sanitizer.py
