[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-mcp-server"
version = "1.4.0"
description = "MCP server for accessing Spark Desktop meeting transcripts, emails, and calendar (read-only)"
requires-python = ">=3.10"
# Dependencies are pinned exactly. pypdf / python-docx / openpyxl parse
# sender-controlled attachment bytes and have had parsing CVEs in the past,
# so surprise upgrades are a security risk. Updates are gated through
# Dependabot (see .github/dependabot.yml).
dependencies = [
    "mcp==1.27.0",
    "pypdf==6.10.2",
    "python-docx==1.2.0",
    "openpyxl==3.1.5",
]

[project.scripts]
spark-mcp = "spark_mcp.server:main"
